Complete Integration test NOT FAKE!!!!!!!!!